<resources>
    <string name="app_name">IDT</string>
    <string name="获取日志文件">获取日志文件</string>
    <string name="获取运行状态">获取运行状态</string>
    <string name="获取目标步数">获取目标步数</string>
    <string name="设置目标步数">设置目标步数</string>
    <string name="获取目标提醒">获取目标提醒</string>
    <string name="设置目标提醒">设置目标提醒</string>
    <string name="获取久坐提醒">获取久坐提醒</string>
    <string name="设置久坐提醒">设置久坐提醒</string>
    <string name="获取天气提醒">获取天气提醒</string>
    <string name="设置天气提醒">设置天气提醒</string>
    <string name="获取用户配置">获取用户配置</string>
    <string name="设置用户配置">设置用户配置</string>
    <string name="删除闹钟">删除闹钟</string>
    <string name="获取闹钟">获取闹钟</string>
    <string name="保存闹钟">保存闹钟</string>
    <string name="获取解锁方式">获取解锁方式</string>
    <string name="设置解锁方式">设置解锁方式</string>
    <string name="获取震动开关">获取震动开关</string>
    <string name="设置震动开关">设置震动开关</string>
    <string name="获取屏幕亮度">获取屏幕亮度</string>
    <string name="设置屏幕亮度">设置屏幕亮度</string>
    <string name="获取心率检测">获取心率检测</string>
    <string name="设置心率检测">设置心率检测</string>
    <string name="获取抬腕亮屏">获取抬腕亮屏</string>
    <string name="设置抬腕亮屏">设置抬腕亮屏</string>
    <string name="获取勿扰模式">获取勿扰模式</string>
    <string name="设置勿扰模式">设置勿扰模式</string>
    <string name="固件升级">固件升级</string>
    <string name="获取应用排序">获取应用排序</string>
    <string name="设置应用排序">设置应用排序</string>
    <string name="发送通知">发送通知</string>
    <string name="重启手环">重启手环</string>
    <string name="查找手环">查找手环</string>
    <string name="数据同步">数据同步</string>
    <string name="活动数据">活动数据</string>
    <string name="设备电量">设备电量</string>
    <string name="设备信息">设备信息</string>
    <string name="解绑">解绑</string>
    <string name="数据输入">数据输入</string>
    <string name="设备">brandy设备</string>
    <string name="app">brandyapp</string>
    <string name="扫描">扫描</string>
    <string name="长按">长按</string>
    <string name="右滑">右滑</string>
    <string name="左滑">左滑</string>
    <string name="上滑">上滑</string>
    <string name="下滑">下滑</string>
    <string name="坐标点击">坐标点击</string>
    <string name="安装表盘">安装表盘</string>
    <string name="删除表盘">删除表盘</string>
</resources>
