<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ryeex.sdkband.MainActivity">


    <TextView
        android:id="@+id/tv_connect_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFECEDED"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/数据输入"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorNormal"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_connect_status" />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/sv_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_input"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/tv_unbind"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/解绑" />

            <TextView
                android:id="@+id/tv_device_info"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/设备信息" />

            <TextView
                android:id="@+id/tv_ota"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/固件升级" />

            <TextView
                android:id="@+id/tv_device_activity"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/活动数据" />

            <TextView
                android:id="@+id/tv_device_data"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/数据同步" />

            <TextView
                android:id="@+id/tv_find_device"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/查找手环" />

            <TextView
                android:id="@+id/tv_reboot_device"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/重启手环" />

            <TextView
                android:id="@+id/tv_send_notification"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/发送通知" />

            <TextView
                android:id="@+id/tv_installSurface"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/安装表盘" />

            <TextView
                android:id="@+id/tv_deleteSurface"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/删除表盘" />

            <TextView
                android:id="@+id/tv_set_app_list"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/设置应用排序" />

            <TextView
                android:id="@+id/tv_app_list"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/获取应用排序" />

            <TextView
                android:id="@+id/tv_device_property"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/设备电量" />

            <TextView
                android:id="@+id/tv_setDoNotDisturb"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/设置勿扰模式" />

            <TextView
                android:id="@+id/tv_getDoNotDisturb"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/获取勿扰模式" />

            <TextView
                android:id="@+id/tv_setDeviceRaiseToWake"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/设置抬腕亮屏" />

            <TextView
                android:id="@+id/tv_getDeviceRaiseToWake"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/获取抬腕亮屏" />

            <TextView
                android:id="@+id/tv_setHeartRateDetect"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/设置心率检测" />

            <TextView
                android:id="@+id/tv_getHeartRateDetect"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/获取心率检测" />

            <TextView
                android:id="@+id/tv_setDeviceBrightness"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/设置屏幕亮度" />


            <TextView
                android:id="@+id/tv_getDeviceBrightness"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/获取屏幕亮度" />

            <TextView
                android:id="@+id/tv_setHomeVibrateSetting"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/设置震动开关" />


            <TextView
                android:id="@+id/tv_getHomeVibrateSetting"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/获取震动开关" />


            <TextView
                android:id="@+id/tv_setUnlock"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/设置解锁方式" />

            <TextView
                android:id="@+id/tv_getUnlock"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/获取解锁方式" />

            <TextView
                android:id="@+id/tv_saveDeviceAlarmClock"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/保存闹钟" />

            <TextView
                android:id="@+id/tv_getDeviceAlarmClockList"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/获取闹钟" />

            <TextView
                android:id="@+id/tv_deleteDeviceAlarmClock"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/删除闹钟" />

            <TextView
                android:id="@+id/tv_setUserConfig"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/设置用户配置" />

            <TextView
                android:id="@+id/tv_getUserConfig"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/获取用户配置" />

            <TextView
                android:id="@+id/tv_setWeatherNotifyStatus"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/设置天气提醒" />

            <TextView
                android:id="@+id/tv_getWeatherNotifyStatus"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/获取天气提醒" />

            <TextView
                android:id="@+id/tv_setSitRemindSetting"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/设置久坐提醒" />

            <TextView
                android:id="@+id/tv_getSitRemindSetting"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/获取久坐提醒" />

            <TextView
                android:id="@+id/tv_setGoalRemindSetting"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/设置目标提醒" />

            <TextView
                android:id="@+id/tv_getGoalRemindSetting"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/获取目标提醒" />

            <TextView
                android:id="@+id/tv_setTargetStep"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/设置目标步数" />

            <TextView
                android:id="@+id/tv_getTargetStep"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/获取目标步数" />

            <TextView
                android:id="@+id/tv_getDeviceRunState"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/获取运行状态" />

            <TextView
                android:id="@+id/tv_getDeviceLogFile"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorNormal"
                android:gravity="center"
                android:text="@string/获取日志文件" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorBack"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/sv_main"
        app:layout_constraintTop_toBottomOf="@+id/et_input"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>